Day-20 devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-loadbalancer

spec:
  selector:
    app: meetmux-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
